Updated Skyrocket config + many video driver tweaks based of TC

--- a/arch/arm/configs/cyanogenmod_skyrocket_defconfig
+++ b/arch/arm/configs/cyanogenmod_skyrocket_defconfig
@@ -35,14 +35,14 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-cyanogenmod"
+CONFIG_LOCALVERSION="-KingKangersOne-9a"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_LZO is not set
+CONFIG_KERNEL_LZO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -181,9 +181,16 @@ CONFIG_BLK_DEV_BSG=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_SIO=y
+# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_CFQ is not set
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_VR is not set
+CONFIG_DEFAULT_IOSCHED="sio"
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -341,7 +348,7 @@ CONFIG_MACH_MSM8X60_FUSN_FFA=y
 CONFIG_MACH_MSM8X60_DRAGON=y
 # CONFIG_MSM_USE_TSIF1 is not set
 CONFIG_MSM_STACKED_MEMORY=y
-# CONFIG_SEC_KERNEL_REBASE_FOR_PMEM_OPTIMIZATION is not set
+CONFIG_SEC_KERNEL_REBASE_FOR_PMEM_OPTIMIZATION=y
 CONFIG_PHYS_OFFSET=0x40400000
 CONFIG_KERNEL_PMEM_EBI_REGION=y
 CONFIG_KERNEL_PMEM_SMI_REGION=y
@@ -411,7 +418,14 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_MPDEC=y
+CONFIG_MSM_KGSL_GPU_CLOCK=y
+CONFIG_MSM_KGSL_GPU_CLOCK_DEFAULT=y
+# CONFIG_MSM_KGSL_GPU_CLOCK_MODERATE is not set
+# CONFIG_MSM_KGSL_GPU_CLOCK_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MIN=384000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -430,7 +444,7 @@ CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
 CONFIG_TARGET_SERIES_CELOX=y
 # CONFIG_TARGET_SERIES_DALI is not set
-# CONFIG_TARGET_SERIES_Q1 is not set
+CONFIG_TARGET_SERIES_Q1=y
 # CONFIG_TARGET_SERIES_P5LTE is not set
 # CONFIG_TARGET_SERIES_P4LTE is not set
 # CONFIG_TARGET_SERIES_P8LTE is not set
@@ -456,7 +470,7 @@ CONFIG_BT_MGMT=y
 # CONFIG_USA_MODEL_SGH_T879 is not set
 CONFIG_SEC_AUDIO_DEVICE=y
 CONFIG_SEC_DVFS_DUAL=y
-CONFIG_SEC_DVFS_DUAL_LOCK=y
+# CONFIG_SEC_DVFS_DUAL_LOCK is not set
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_PIL=y
@@ -576,6 +590,9 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
 CONFIG_SMP_ON_UP=y
+CONFIG_ARM_CPU_TOPOLOGY=y
+CONFIG_SCHED_MC=y
+CONFIG_SCHED_SMT=y
 CONFIG_HAVE_ARM_SCU=y
 # CONFIG_ARM_ARCH_TIMER is not set
 CONFIG_VMSPLIT_3G=y
@@ -660,15 +677,45 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_MINMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BRAZILIANWAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_SEC_DVFS=y
+CONFIG_CPU_FREQ_GOV_SMARTASS=y
+CONFIG_CPU_FREQ_GOV_SCARY=y
+CONFIG_CPU_FREQ_GOV_LAZY=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+# CONFIG_CPU_FREQ_GOV_MINMAX is not set
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_CPU_FREQ_GOV_BRAZILIANWAX=y
+# CONFIG_CPU_FREQ_GOV_ONDEMANDX is not set
+CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
+# CONFIG_SEC_DVFS is not set
 # CONFIG_SEC_DVFS_UNI is not set
 CONFIG_SEC_LIMIT_LCD_OFF_CPU_MAX_FREQ=y
+CONFIG_VDD_USERSPACE=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -1169,7 +1216,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_SENSORS_APDS990X is not set
 # CONFIG_HMC6352 is not set
 CONFIG_SENSORS_AK8975=y
-# CONFIG_USE_A2220_B is not set
+CONFIG_USE_A2220_B=y
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
@@ -1484,7 +1531,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
-CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH=y
+# CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
@@ -1494,15 +1541,15 @@ CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH=y
 # CONFIG_TOUCHSCREEN_GUNZE is not set
 # CONFIG_TOUCHSCREEN_ELO is not set
 # CONFIG_TOUCHSCREEN_WACOM_W8001 is not set
-# CONFIG_EPEN_WACOM_G5SP is not set
+CONFIG_EPEN_WACOM_G5SP=y
 # CONFIG_TOUCHSCREEN_MAX11801 is not set
 # CONFIG_TOUCHSCREEN_MCS5000 is not set
 # CONFIG_TOUCHSCREEN_MTOUCH is not set
 # CONFIG_TOUCHSCREEN_INEXIO is not set
 # CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
-CONFIG_TOUCHSCREEN_QT602240=y
-# CONFIG_TOUCHSCREEN_ATMEL_MXT540E is not set
+# CONFIG_TOUCHSCREEN_QT602240 is not set
+CONFIG_TOUCHSCREEN_ATMEL_MXT540E=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_RMI4_I2C is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
@@ -1519,7 +1566,7 @@ CONFIG_TOUCHSCREEN_QT602240=y
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C is not set
 # CONFIG_TOUCHSCREEN_MELFAS is not set
 # CONFIG_TOUCHSCREEN_MXT768E is not set
-# CONFIG_SHAPE_TOUCH is not set
+CONFIG_SHAPE_TOUCH=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATI_REMOTE is not set
@@ -1539,7 +1586,7 @@ CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 # CONFIG_INPUT_CMA3000 is not set
 CONFIG_PMIC8058_OTHC=y
 # CONFIG_BOSCH_BMA150 is not set
-# CONFIG_INPUT_BMP180 is not set
+CONFIG_INPUT_BMP180=y
 
 #
 # Hardware I/O ports
@@ -2201,7 +2248,7 @@ CONFIG_SENSOR_S5K5BAFX=y
 CONFIG_MSM_CAMERA_FLASH=y
 # CONFIG_MSM_CAMERA_SENSOR is not set
 # CONFIG_MSM_ACTUATOR is not set
-# CONFIG_FLASH_TORCH_MODE is not set
+CONFIG_FLASH_TORCH_MODE=y
 CONFIG_MSM_GEMINI=y
 CONFIG_MSM_VPE=y
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
@@ -2298,8 +2345,8 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_MDP_NONE is not set
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
-# CONFIG_FB_MSM_MIPI_DSI is not set
-CONFIG_FB_MSM_LCDC=y
+CONFIG_FB_MSM_MIPI_DSI=y
+# CONFIG_FB_MSM_LCDC is not set
 # CONFIG_CMC623_P5LTE is not set
 # CONFIG_CMC624_P8LTE is not set
 CONFIG_FB_MSM_OVERLAY=y
@@ -2313,7 +2360,7 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MDDI_QUICKVX is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
-CONFIG_FB_MSM_LCDC_PANEL=y
+# CONFIG_FB_MSM_LCDC_PANEL is not set
 # CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
 # CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
@@ -2322,13 +2369,13 @@ CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_MIPI_DSI_S6D6AA0_WXGA is not set
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_HD720 is not set
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA is not set
-# CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA_Q1 is not set
+CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA_Q1=y
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AB0_WXGA is not set
-# CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH is not set
+CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH=y
 # CONFIG_FB_MSM_MIPI_DSI_SAMSUNG is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
-CONFIG_FB_MSM_LCDC_LD9040_WVGA=y
+# CONFIG_FB_MSM_LCDC_LD9040_WVGA is not set
 # CONFIG_FB_MSM_LCDC_P5LTE_WXGA is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
@@ -2353,14 +2400,14 @@ CONFIG_FB_MSM_LCDC_LD9040_WVGA=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
 # CONFIG_FB_MSM_MIPI_S6D6AA0_WXGA_PT is not set
 # CONFIG_FB_MSM_MIPI_S6E8AA0_HD720_PT is not set
-# CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PT is not set
+CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PT=y
 # CONFIG_FB_MSM_MIPI_S6E8AB0_WXGA_PT is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 # CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
-CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL=y
+# CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_P5LTE_WXGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
@@ -2394,7 +2441,7 @@ CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA_PANEL is not set
 # CONFIG_FB_MSM_MIPI_S6D6AA0_WXGA_PANEL is not set
 # CONFIG_FB_MSM_MIPI_S6E8AA0_HD720_PANEL is not set
-# CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PANEL is not set
+CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PANEL=y
 # CONFIG_FB_MSM_MIPI_S6E8AB0_WXGA_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SAMSUNG_VIDEO_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT_PANEL is not set
@@ -2937,7 +2984,7 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
-CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
+# CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE is not set
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_DATA_SIZE=128
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_ECC_SIZE=16
@@ -2951,8 +2998,9 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-# CONFIG_XVMALLOC is not set
-# CONFIG_ZRAM is not set
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_LIRC_STAGING is not set
 # CONFIG_EASYCAP is not set
@@ -3436,6 +3484,8 @@ CONFIG_CRC32=y
 CONFIG_LIBCRC32C=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
+CONFIG_LZO_COMPRESS=y
+CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
