--- a/arch/arm/configs/cyanogenmod_quincyatt_defconfig
+++ b/arch/arm/configs/cyanogenmod_quincyatt_defconfig
@@ -1,9 +1,7 @@
-
 #
 # Automatically generated make config: don't edit
 # Linux/arm 3.0.41 Kernel Configuration
 #
-
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_HAVE_SCHED_CLOCK=y
@@ -37,7 +35,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-KingKangersOne-IX"
+CONFIG_LOCALVERSION="-KingKangersOne-9a"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -426,7 +424,7 @@ CONFIG_MSM_KGSL_GPU_CLOCK_DEFAULT=y
 # CONFIG_MSM_KGSL_GPU_CLOCK_MODERATE is not set
 # CONFIG_MSM_KGSL_GPU_CLOCK_MAX is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1566000
+CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=384000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -3506,4 +3504,3 @@ CONFIG_HAS_DMA=y
 CONFIG_CPU_RMAP=y
 CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
-
