--- a/arch/arm/configs/cyanogenmod_skyrocket_defconfig
+++ b/arch/arm/configs/cyanogenmod_skyrocket_defconfig
@@ -1216,7 +1216,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_SENSORS_APDS990X is not set
 # CONFIG_HMC6352 is not set
 CONFIG_SENSORS_AK8975=y
-CONFIG_USE_A2220_B=y
+# CONFIG_USE_A2220_B is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
@@ -1531,7 +1531,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
-# CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH is not set
+CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH=y
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
@@ -1541,15 +1541,15 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_GUNZE is not set
 # CONFIG_TOUCHSCREEN_ELO is not set
 # CONFIG_TOUCHSCREEN_WACOM_W8001 is not set
-CONFIG_EPEN_WACOM_G5SP=y
+# CONFIG_EPEN_WACOM_G5SP is not set
 # CONFIG_TOUCHSCREEN_MAX11801 is not set
 # CONFIG_TOUCHSCREEN_MCS5000 is not set
 # CONFIG_TOUCHSCREEN_MTOUCH is not set
 # CONFIG_TOUCHSCREEN_INEXIO is not set
 # CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
-# CONFIG_TOUCHSCREEN_QT602240 is not set
-CONFIG_TOUCHSCREEN_ATMEL_MXT540E=y
+CONFIG_TOUCHSCREEN_QT602240=y
+# CONFIG_TOUCHSCREEN_ATMEL_MXT540E is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_RMI4_I2C is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
@@ -1566,7 +1566,7 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT540E=y
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C is not set
 # CONFIG_TOUCHSCREEN_MELFAS is not set
 # CONFIG_TOUCHSCREEN_MXT768E is not set
-CONFIG_SHAPE_TOUCH=y
+# CONFIG_SHAPE_TOUCH is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATI_REMOTE is not set
@@ -1586,7 +1586,7 @@ CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 # CONFIG_INPUT_CMA3000 is not set
 CONFIG_PMIC8058_OTHC=y
 # CONFIG_BOSCH_BMA150 is not set
-CONFIG_INPUT_BMP180=y
+# CONFIG_INPUT_BMP180 is not set
 
 #
 # Hardware I/O ports
