--- a/arch/arm/configs/cyanogenmod_skyrocket_defconfig
+++ b/arch/arm/configs/cyanogenmod_skyrocket_defconfig
@@ -444,7 +444,7 @@ CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
 CONFIG_TARGET_SERIES_CELOX=y
 # CONFIG_TARGET_SERIES_DALI is not set
-CONFIG_TARGET_SERIES_Q1=y
+# CONFIG_TARGET_SERIES_Q1 is not set
 # CONFIG_TARGET_SERIES_P5LTE is not set
 # CONFIG_TARGET_SERIES_P4LTE is not set
 # CONFIG_TARGET_SERIES_P8LTE is not set
