--- a/arch/arm/configs/cyanogenmod_skyrocket_defconfig
+++ b/arch/arm/configs/cyanogenmod_skyrocket_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.41 Kernel Configuration
+# Linux/arm 3.0.43 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-KingKangersOne-9a"
+CONFIG_LOCALVERSION="-KingKangersOne-X"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -631,7 +631,7 @@ CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ARCH_POPULATES_NODE_MAP is not set
@@ -2248,7 +2248,7 @@ CONFIG_SENSOR_S5K5BAFX=y
 CONFIG_MSM_CAMERA_FLASH=y
 # CONFIG_MSM_CAMERA_SENSOR is not set
 # CONFIG_MSM_ACTUATOR is not set
-CONFIG_FLASH_TORCH_MODE=y
+# CONFIG_FLASH_TORCH_MODE is not set
 CONFIG_MSM_GEMINI=y
 CONFIG_MSM_VPE=y
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
@@ -2317,6 +2317,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 #
 # Frame buffer hardware drivers
 #
+CONFIG_FB_MSM_VSYNC_SYSFS=y
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_TMIO is not set
 # CONFIG_FB_UDL is not set
@@ -2345,8 +2346,8 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_MDP_NONE is not set
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
-CONFIG_FB_MSM_MIPI_DSI=y
-# CONFIG_FB_MSM_LCDC is not set
+# CONFIG_FB_MSM_MIPI_DSI is not set
+CONFIG_FB_MSM_LCDC=y
 # CONFIG_CMC623_P5LTE is not set
 # CONFIG_CMC624_P8LTE is not set
 CONFIG_FB_MSM_OVERLAY=y
@@ -2360,7 +2361,7 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MDDI_QUICKVX is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
-# CONFIG_FB_MSM_LCDC_PANEL is not set
+CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
 # CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
@@ -2369,13 +2370,13 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MIPI_DSI_S6D6AA0_WXGA is not set
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_HD720 is not set
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA is not set
-CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA_Q1=y
+# CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA_Q1 is not set
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AB0_WXGA is not set
-CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH=y
+# CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH is not set
 # CONFIG_FB_MSM_MIPI_DSI_SAMSUNG is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
-# CONFIG_FB_MSM_LCDC_LD9040_WVGA is not set
+CONFIG_FB_MSM_LCDC_LD9040_WVGA=y
 # CONFIG_FB_MSM_LCDC_P5LTE_WXGA is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
@@ -2400,14 +2401,14 @@ CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
 # CONFIG_FB_MSM_MIPI_S6D6AA0_WXGA_PT is not set
 # CONFIG_FB_MSM_MIPI_S6E8AA0_HD720_PT is not set
-CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PT=y
+# CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PT is not set
 # CONFIG_FB_MSM_MIPI_S6E8AB0_WXGA_PT is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 # CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
-# CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL is not set
+CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL=y
 # CONFIG_FB_MSM_LCDC_P5LTE_WXGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
@@ -2441,7 +2442,7 @@ CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA_PANEL is not set
 # CONFIG_FB_MSM_MIPI_S6D6AA0_WXGA_PANEL is not set
 # CONFIG_FB_MSM_MIPI_S6E8AA0_HD720_PANEL is not set
-CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PANEL=y
+# CONFIG_FB_MSM_MIPI_S6E8AA0_WXGA_Q1_PANEL is not set
 # CONFIG_FB_MSM_MIPI_S6E8AB0_WXGA_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SAMSUNG_VIDEO_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT_PANEL is not set
@@ -2984,7 +2985,7 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
-# CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE is not set
+CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_DATA_SIZE=128
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_ECC_SIZE=16
@@ -3001,6 +3002,8 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZCACHE=y
+# CONFIG_QCACHE is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_LIRC_STAGING is not set
 # CONFIG_EASYCAP is not set
@@ -3348,7 +3351,9 @@ CONFIG_SEC_DEBUG_USER=y
 CONFIG_SEC_DEBUG_SUBSYS=y
 # CONFIG_SEC_DEBUG_DCVS_LOG is not set
 # CONFIG_SEC_DEBUG_FUELGAUGE_LOG is not set
-# CONFIG_SEC_DEBUG_LOW_LOG is not set
+# CONFIG_SEC_DEBUG_MDP_LOG is not set
+# CONFIG_SEC_DEBUG_POWERCOLLAPSE_LOG is not set
+# CONFIG_SEC_DEBUG_SDIO_LOG is not set
 CONFIG_PID_IN_CONTEXTIDR=y
 
 #
@@ -3456,7 +3461,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
-# CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_LZO=y
 
 #
 # Random Number Generation
