--- a/arch/arm/configs/cyanogenmod_skyrocket_defconfig
+++ b/arch/arm/configs/cyanogenmod_skyrocket_defconfig
@@ -348,7 +348,7 @@ CONFIG_MACH_MSM8X60_FUSN_FFA=y
 CONFIG_MACH_MSM8X60_DRAGON=y
 # CONFIG_MSM_USE_TSIF1 is not set
 CONFIG_MSM_STACKED_MEMORY=y
-CONFIG_SEC_KERNEL_REBASE_FOR_PMEM_OPTIMIZATION=y
+#CONFIG_SEC_KERNEL_REBASE_FOR_PMEM_OPTIMIZATION is not set
 CONFIG_PHYS_OFFSET=0x40400000
 CONFIG_KERNEL_PMEM_EBI_REGION=y
 CONFIG_KERNEL_PMEM_SMI_REGION=y
