--- a/drivers/i2c/chips/Makefile
+++ b/drivers/i2c/chips/Makefile
@@ -15,6 +15,8 @@ ifdef CONFIG_USA_MODEL_SGH_I717
 obj-$(CONFIG_SENSORS_YDA165)	+= yda165_integ.o
 else ifdef CONFIG_USA_MODEL_SGH_I577
 obj-$(CONFIG_SENSORS_YDA165)	+= yda165_integ.o
+else ifdef CONFIG_USA_MODEL_SGH_T769
+obj-$(CONFIG_SENSORS_YDA165)   += yda165_integ.o
 else ifdef CONFIG_EUR_MODEL_GT_P7320
 obj-$(CONFIG_WM8994_AMP)        += wm8994_amp.o
 else ifdef CONFIG_USA_MODEL_SGH_I957
