--- a/arch/arm/configs/cyanogenmod_hercules_defconfig
+++ b/arch/arm/configs/cyanogenmod_hercules_defconfig
@@ -35,14 +35,14 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-cyanogenmod"
+CONFIG_LOCALVERSION="-KingKangersOne.11"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_LZO is not set
+CONFIG_KERNEL_LZO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -181,9 +181,16 @@ CONFIG_BLK_DEV_BSG=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_SIO=y
+# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_CFQ is not set
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_VR is not set
+CONFIG_DEFAULT_IOSCHED="sio"
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -411,7 +418,14 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_MPDEC=y
+CONFIG_MSM_KGSL_GPU_CLOCK=y
+CONFIG_MSM_KGSL_GPU_CLOCK_DEFAULT=y
+# CONFIG_MSM_KGSL_GPU_CLOCK_MODERATE is not set
+# CONFIG_MSM_KGSL_GPU_CLOCK_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MIN=384000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -457,7 +471,7 @@ CONFIG_BT_MGMT=y
 # CONFIG_USA_MODEL_SGH_T879 is not set
 CONFIG_SEC_AUDIO_DEVICE=y
 CONFIG_SEC_DVFS_DUAL=y
-CONFIG_SEC_DVFS_DUAL_LOCK=y
+# CONFIG_SEC_DVFS_DUAL_LOCK is not set
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_PIL=y
@@ -489,6 +503,7 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_MSM_ETM is not set
 # CONFIG_MSM_QDSS is not set
 # CONFIG_CLOCK_MAP is not set
+CONFIG_MSM_SLEEP_STATS=y
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 CONFIG_MSM_GSBI9_UART=y
@@ -576,6 +591,9 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
 CONFIG_SMP_ON_UP=y
+CONFIG_ARM_CPU_TOPOLOGY=y
+CONFIG_SCHED_MC=y
+CONFIG_SCHED_SMT=y
 CONFIG_HAVE_ARM_SCU=y
 # CONFIG_ARM_ARCH_TIMER is not set
 CONFIG_VMSPLIT_3G=y
@@ -660,15 +678,45 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_MINMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BRAZILIANWAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_SEC_DVFS=y
+CONFIG_CPU_FREQ_GOV_SMARTASS=y
+CONFIG_CPU_FREQ_GOV_SCARY=y
+CONFIG_CPU_FREQ_GOV_LAZY=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+# CONFIG_CPU_FREQ_GOV_MINMAX is not set
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_CPU_FREQ_GOV_BRAZILIANWAX=y
+# CONFIG_CPU_FREQ_GOV_ONDEMANDX is not set
+CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
+# CONFIG_SEC_DVFS is not set
 # CONFIG_SEC_DVFS_UNI is not set
 CONFIG_SEC_LIMIT_LCD_OFF_CPU_MAX_FREQ=y
+CONFIG_VDD_USERSPACE=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -2270,6 +2318,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 #
 # Frame buffer hardware drivers
 #
+CONFIG_FB_MSM_VSYNC_SYSFS=y
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_TMIO is not set
 # CONFIG_FB_UDL is not set
@@ -2303,7 +2352,7 @@ CONFIG_FB_MSM_LCDC=y
 # CONFIG_CMC623_P5LTE is not set
 # CONFIG_CMC624_P8LTE is not set
 CONFIG_FB_MSM_OVERLAY=y
-# CONFIG_FB_MSM_MDP_ADDITIONAL_BUS_SCALING is not set
+CONFIG_FB_MSM_MDP_ADDITIONAL_BUS_SCALING=y
 CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
@@ -3411,7 +3460,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
-# CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_LZO=y
 
 #
 # Random Number Generation
