--- a/arch/arm/configs/cyanogenmod_quincyatt_defconfig
+++ b/arch/arm/configs/cyanogenmod_quincyatt_defconfig
@@ -35,7 +35,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-KingKangersOne.11"
+CONFIG_LOCALVERSION="-KingKangersOne.12"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -682,6 +682,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_MINMAX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
@@ -697,6 +698,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS=y
+CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_SCARY=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
