--- a/arch/arm/configs/cyanogenmod_skyrocket_defconfig
+++ b/arch/arm/configs/cyanogenmod_skyrocket_defconfig
@@ -502,6 +502,8 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_MSM_ETM is not set
 # CONFIG_MSM_QDSS is not set
 # CONFIG_CLOCK_MAP is not set
+CONFIG_MSM_SLEEP_STATS=y
+# CONFIG_MSM_SLEEP_STATS_DEVICE is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 CONFIG_MSM_GSBI9_UART=y
 CONFIG_MSM_SHOW_RESUME_IRQ=y
@@ -3355,15 +3357,14 @@ CONFIG_SEC_DEBUG_SCHED_LOG=y
 # CONFIG_SEC_DEBUG_SEMAPHORE_LOG is not set
 CONFIG_SEC_DEBUG_USER=y
 # CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
+# CONFIG_SEC_DEBUG_MSG_LOG is not set
+CONFIG_SEC_DEBUG_SUBSYS=y
 # CONFIG_SEC_DEBUG_DCVS_LOG is not set
 # CONFIG_SEC_DEBUG_FUELGAUGE_LOG is not set
 # CONFIG_SEC_DEBUG_MDP_LOG is not set
 # CONFIG_SEC_DEBUG_POWERCOLLAPSE_LOG is not set
 # CONFIG_SEC_DEBUG_SDIO_LOG is not set
-<<<<<<< HEAD
 CONFIG_PID_IN_CONTEXTIDR=y
-=======
->>>>>>> 00e92fa252f9cefde91bd3c5abade19a55d08a5a
 
 #
 # Security options
