fix skyrocket build for 3.0.49

--- a/arch/arm/configs/cyanogenmod_skyrocket_defconfig
+++ b/arch/arm/configs/cyanogenmod_skyrocket_defconfig
@@ -348,7 +348,7 @@ CONFIG_MACH_MSM8X60_FUSN_FFA=y
 CONFIG_MACH_MSM8X60_DRAGON=y
 # CONFIG_MSM_USE_TSIF1 is not set
 CONFIG_MSM_STACKED_MEMORY=y
-#CONFIG_SEC_KERNEL_REBASE_FOR_PMEM_OPTIMIZATION is not set
+# CONFIG_SEC_KERNEL_REBASE_FOR_PMEM_OPTIMIZATION is not set
 CONFIG_PHYS_OFFSET=0x40400000
 CONFIG_KERNEL_PMEM_EBI_REGION=y
 CONFIG_KERNEL_PMEM_SMI_REGION=y
@@ -622,7 +622,7 @@ CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
-CONFIG_SPLIT_PTLOCK_CPUS=999999
+CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
@@ -2337,7 +2337,7 @@ CONFIG_MSM_VIDC_VENC=y
 CONFIG_MSM_VIDC_VDEC=y
 # CONFIG_VIDEO_MHL_V1 is not set
 CONFIG_VIDEO_MHL_V2=y
-CONFIG_MHL_D3_SUPPORT=y
+# CONFIG_MHL_D3_SUPPORT is not set
 CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
 CONFIG_FB_MSM_LOGO=y
